--- a/index.html
+++ b/index.html
@@ -1,47 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> jagad alam semesta</title>
+<title>Tugas Pemrograman Web</title>
 </head>
-<body background="god.jpg"><b><H1><font color="black">SANG PEMILIK ALAM</font></H1></b><hr size="2">
-<font color="black">Kita,hidup di dunia hanya sementara.
-Bagaikan hanya sekejap mata
-Ku ingin semua ini bertahan lama.
-Dan tak akan pernah usai.
+<body style="background-color:powderblue;"><b><H1><font color="blue">WELCOME TO THE ITA'S SITE xD</font></H1></b><hr size="2">
 
-<strong><font color="blue"><u>Tuhan pemilik alam semesta,
-Inikah akhir dunia mu ?</u></font></strong>
-Kulalai kan perintah mu,
-Dari yang terkecil hingga tak terhitung lagi.
-
-<b>Kau teramat pemaaf dan pengasih
-Kau maha agung dan maha besar
-Biarkan lah kami songsong sang surya
-Dan jelajahi duniamu ini.</b>
-
-Tetapi kami akan selalu bersyukur
-Atas karuniamu
-Cinta kami pada mu
-Tak akan pudar hingga akhir hayat ku.
-<strong><font color="blue"><u><p>Siapa yang Menciptakan Alam Semesta dari Ketiadaan?</u></font></strong><br>
-Dengan kemenangan Dentuman Besar, tesis "alam semesta tanpa batas", yang membentuk basis bagi dogma materialis, dibuang ke tumpukan sampah sejarah.
-Namun bagi materialis, muncul pula dua pertanyaan yang tidak mengenakkan:<br>
-Apa yang sudah ada sebelum Dentuman Besar? Dan kekuatan apa yang telah menyebabkan Dentuman Besar sehingga memunculkan alam
- semesta yang tidak ada sebelumnya?
-Materialis seperti Arthur Eddington menyadari bahwa jawaban untuk pertanyaan-pertanyaan ini dapat mengarah pada keberadaan 
-pencipta agung dan itu tidak mereka sukai. Filsuf ateis, Anthony Flew, mengomentari masalah ini:
-Jelas sekali, pengakuan itu baik bagi jiwa.</p>
-<b><h4 align="center"><u>Tanda-Tanda Al Quran</u></h4></b>
- Ini telah dinyatakan dalam kitab-kitab suci yang telah berfungsi sebagai penunjuk jalan bagi manusia selama ribuan tahun.
- Dalam semua kitab suci seperti Perjanjian Lama, Perjanjian Baru, dan Al Quran, dinyatakan bahwa alam semesta dan segala isinya
- diciptakan dari ketiadaan oleh Allah.
-Dalam satu-satunya kitab yang diturunkan Allah yang telah bertahan sepenuhnya utuh, Al Quran, ada pernyataan
- tentang penciptaan alam semesta dari ketiadaan, di samping bagaimana kemunculannya sesuai dengan ilmu pengetahuan abad ke-20,
- meskipun diungkapkan 14 abad yang lalu.
-Pertama, penciptaan alam semesta dari ketiadaan diungkapkan dalam Al Quran sebagai berikut:<br>
-<h4 align ="center"><i>"Dia pencipta langit dan bumi. Bagaimana Dia mempunyai anak padahal Dia tidak mempunyai istri.<br>
-Dia menciptakan segala sesuatu dan Dia mengetahui segala sesuatu." (QS. Al An'aam, 6: 101)<br>
-"Dan apakah orang-orang kafir tidak mengetahui bahwasanya langit dan bumi itu keduanya dahulu adalah suatu yang padu,<br>
-kemudian Kami pisahkan antara keduanya. Dan daripada air Kami jadikan segala sesuatu yang hidup." (QS. Al Anbiyaa', 21: 30)</font></i></h4>
+ <strong><h2>Hope you have a good day everyday :))</h2></strong>
+ 
 </body>
 </html>
