--- a/form.html
+++ b/form.html
@@ -1,3 +1,100 @@
+<html>
+<head><title>Form Pendaftaran</title></head>
+<body>
+<table border="4" bgcolor="EE82EE" align="center" height="500" width="600" cellpadding="20">
+<tr>
+<td>
+<b><font color="black" size="10"> Signing Up for ASTRO Fan </font></b>
+<p> Fansite for AROHA <3 </p>
+<br>
+<p><b> Username </b></p>
+<input type="text" Name="nama" size="20" placeholder="Enter First Name">
+<input type="text" Name="nama" size="20" placeholder="Enter Last Name"><br><br>
+<p><b> Display Name </b></p>
+<input type="text" Name="displayname" size="46" placeholder="Enter Your Display Name"><br><br>
+<p><b> Email </b></p>
+<input type="text" Name="email" size="46" placeholder="Email Anda"><br><br>
+<p><b> Make Your Password </b></p>
+<input type="password" Name="sandi" size="46" placeholder="Enter Your New Password"><br><br>
+<input type="repassword" Name="sandi" size="46" placeholder="Enter Your Password Again"><br>
+<p><b> B.O.D </b></p>
+<select name="Tanggal">
+<option>-Day-</option>
+<option value="1">1</option>
+<option value="2">2</option>
+<option value="3">3</option>
+<option value="4">4</option>
+<option value="5">5</option>
+<option value="6">6</option>
+<option value="7">7</option>
+<option value="8">8</option>
+<option value="9">9</option>
+<option value="10">10</option>
+<option value="11">11</option>
+<option value="12">12</option>
+<option value="13">13</option>
+<option value="14">14</option>
+<option value="15">15</option>
+<option value="16">16</option>
+<option value="17">17</option>
+<option value="18">18</option>
+<option value="19">19</option>
+<option value="20">20</option>
+<option value="21">21</option>
+<option value="22">22</option>
+<option value="23">23</option>
+<option value="24">24</option>
+<option value="25">25</option>
+<option value="26">26</option>
+<option value="27">27</option>
+<option value="28">28</option>
+<option value="29">29</option>
+<option value="30">30</option>
+<option value="31">31</option>
+<option value="32">32</option>
+</select>
+<select name="Month">
+<option>-Bulan-</option>
+<option value="1">January</option>
+<option value="2">February</option>
+<option value="3">March</option>
+<option value="4">April</option>
+<option value="5">May</option>
+<option value="6">Juny</option>
+<option value="7">July</option>
+<option value="8">Agustus</option>
+<option value="9">September</option>
+<option value="10">October</option>
+<option value="11">November</option>
+<option value="12">December</option>
+</select>
+<select name="Tahun">
+<option>-Year-</option>
+<option value="1980">1980</option>
+<option value="1981">1981</option>
+<option value="1982">1982</option>
+<option value="1983">1983</option>
+<option value="1984">1984</option>
+<option value="1985">1985</option>
+<option value="1986">1986</option>
+<option value="1987">1987</option>
+<option value="1988">1988</option>
+<option value="1989">1989</option>
+<option value="1990">1990</option>
+<option value="1991">1991</option>
+<option value="1992">1992</option>
+<option value="1993">1993</option>
+<option value="1994">1994</option>
+<option value="1995">1995</option>
+<option value="1996">1996</option>
+<option value="1997">1997</option>
+<option value="1998">1998</option>
+<option value="1999">1999</option>
+<option value="2000">2000</option>
+<option value="2001">2001</option>
+<option value="2002">2002</option>
+<option value="2003">2003</option>
+<option value="2004">2004</option>
 <option value="2005">2005</option>
 <option value="2006">2006</option>
 <option value="2007">2007</option>
@@ -12,44 +109,41 @@
 <option value="2016">2016</option>
 <option value="2017">2017</option>
 </select><br><br>
-<input type="radio" name="Kelamin" value="L">Laki Laki
-<input type="radio" name="Kelamin" value="P">Perempuan
+<input type="radio" name="Gender" value="L">Male
+<input type="radio" name="Gender" value="P">Female
 <br><br>
-<p><b> Asal Negara </b></p>
-<select name="Asal Negara">
-<option>-Asal Negara-</option>
+<p><b> Foreign Country </b></p>
+<select name="foreign">
+<option>-Foreign Country-</option>
 <option value="1">Arab</option>
-<option value="2">Belanda</option>
+<option value="2">Canada</option>
 <option value="3">China</option>
 <option value="4">Filiphina</option>
-<option value="5">Georgia</option>
-<option value="6">Hawaii</option>
-<option value="7">Hindia</option>
-<option value="8">Indonesia</option>
-<option value="9">Inggris</option>
+<option value="5">France</option>
+<option value="6">Georgia</option>
+<option value="7">Germany</option>
+<option value="8">India</option>
+<option value="9">Indonesia</option>
 <option value="10">Italy</option>
 <option value="11">Japan</option>
-<option value="12">Jerman</option>
-<option value="13">Canada</option>
-<option value="14">Korea</option>
-<option value="15">Laos</option>
-<option value="16">Myammar</option>
-<option value="17">Malaysia</option>
-<option value="18">Nepal</option>
+<option value="12">Korea</option>
+<option value="13">Laos</option>
+<option value="14">London</option>
+<option value="15">Myammar</option>
+<option value="16">Malaysia</option>
+<option value="17">Nepal</option>
+<option value="18">Netherland</option>
 <option value="19">Portugis</option>
 <option value="20">Perancis</option>
 <option value="21">Rumania</option>
 <option value="22">Rusia</option>
 <option value="23">Somalia</option>
-<option value="24">Spanyol</option>
+<option value="24">Spanish</option>
 <option value="25">Swiss</option>
 <option value="26">Thailand</option>
-<option value="27">Turki</option>
-<option value="28">Ukrania</option>
-<option value="29">Uzbekiztan</option>
-<option value="30">Vietnam</option>
-<option value="31">Other..</option>
-<option value="32">32</option>
+<option value="27">USA</option>
+<option value="28">Vietnam</option>
+<option value="29">Other..</option>
 </select><br><br>
 <p><b> Your Bias </b></p>
 <input type="radio" name="Bias" value="mj">MJ
@@ -61,7 +155,7 @@
 <input type="radio" name="Bias" value="ro">Rocky
 <input type="radio" name="Bias" value="sa">Sanha
 <br><br>
-<input value="Kirim" style="background-color: 4985D0; height: 50; width: 150;"type="submit">
+<input value="Submit" style="background-color: 4985D0; height: 50; width: 150;"type="submit">
 </td>
 </tr>
 
