--- a/form.html
+++ b/form.html
@@ -54,7 +54,7 @@
 <option value="32">32</option>
 </select>
 <select name="Month">
-<option>-Bulan-</option>
+<option>-Month-</option>
 <option value="1">January</option>
 <option value="2">February</option>
 <option value="3">March</option>
