--- a/form.html
+++ b/form.html
@@ -1,11 +1,8 @@
 <html>
 <head><title>Form Pendaftaran</title></head>
 <body>
-<table border="4" bgcolor="EE82EE" align="center" height="500" width="600" cellpadding="20">
-<tr>
-<td>
-<b><font color="black" size="10"> Signing Up for ASTRO Fan </font></b>
-<p> Fansite for AROHA <3 </p>
+<b><font color="black" size="10"> Signing Up for ASTRO Fan </font></b><i class="fa fa-heart"></i>
+<p> Fansite for AROHA</p>
 <br>
 <p><b> Username </b></p>
 <input type="text" Name="nama" size="20" placeholder="Enter First Name">
@@ -16,6 +13,7 @@
 <input type="text" Name="email" size="46" placeholder="Email Anda"><br><br>
 <p><b> Make Your Password </b></p>
 <input type="password" Name="sandi" size="46" placeholder="Enter Your New Password"><br><br>
+<input type="repassword" Name="sandi" size="46" placeholder="Enter Your Password Again"><br>
 <p><b> B.O.D </b></p>
 <select name="Tanggal">
 <option>-Day-</option>
@@ -155,8 +153,7 @@
 <input type="radio" name="Bias" value="sa">Sanha
 <br><br>
 <input value="Submit" style="background-color: 4985D0; height: 50; width: 150;"type="submit">
-</td>
-</tr>
+
 
 </body>
 </html>
