--- a/form.html
+++ b/form.html
@@ -1,8 +1,12 @@
 <html>
-<head><title>Form Pendaftaran</title></head>
-<body>
-<b><font color="black" size="10"> Signing Up for ASTRO Fan </font></b><i class="fa fa-heart"></i>
-<p> Fansite for AROHA</p>
+<head>
+<style>
+body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd798a4b244/tumblr_ok7ysto3RB1w3bg89o1_500.gif); background-size:100%100%; font-size:15px; margin: auto; width:50%; top:10%;}
+</style>
+<title>Form Pendaftaran</title></head>
+<body> 
+<b><font color="black" size="6" style=font-family:"ravie";> Signing Up for ASTRO</font></b><br>
+<b><font color="black" size="5" style=font-family:"consolas";>=Fansite for AROHA=</font></b>
 <br>
 <p><b> Username </b></p>
 <input type="text" Name="nama" size="20" placeholder="Enter First Name">
@@ -142,11 +146,15 @@
 <option value="28">Vietnam</option>
 <option value="29">Other..</option>
 </select><br><br>
+<p><b> Instagram </b></p>
+<input type="text" Name="inst" size="20"><br><br>
+<p><b> Twitter </b></p>
+<input type="text" Name="twit" size="20"><br><br>
 <p><b> Your Bias </b></p>
 <input type="radio" name="Bias" value="mj">MJ
 <input type="radio" name="Bias" value="ji">Jinjin
 <br><br>
-<input type="radio" name="Bias" value="ch">ChaEunWoo
+<input type="radio" name="Bias" value="ch">Cha Eunwoo
 <input type="radio" name="Bias" value="mo">Moonbin
 <br><br>
 <input type="radio" name="Bias" value="ro">Rocky
