--- a/form.html
+++ b/form.html
@@ -1,11 +1,12 @@
 <html>
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd798a4b244/tumblr_ok7ysto3RB1w3bg89o1_500.gif); background-size:100%100%; font-size:15px; margin: auto; width:50%; top:10%;}
 </style>
 <title>Form Pendaftaran</title></head>
 <body> 
-<b><font color="black" size="6" style=font-family:"ravie";> Signing Up for ASTRO</font></b><br>
+<i class="fa fa-star"></i><i class="fa fa-star"></i><b><font color="black" size="6" style=font-family:"ravie";> Signing Up for ASTRO</font></b><br><i class="fa fa-star"></i><i class="fa fa-star"></i>
 <b><font color="black" size="5" style=font-family:"consolas";>=Fansite for AROHA=</font></b>
 <br>
 <p><b> Username </b></p>
@@ -113,9 +114,9 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <input type="radio" name="Gender" value="L">Male
 <input type="radio" name="Gender" value="P">Female
 <br><br>
-<p><b> Foreign Country </b></p>
+<i class="fa fa-map-marker"></i><p><b>Country</b></p><i class="fa fa-map-marker"></i>
 <select name="foreign">
-<option>-Foreign Country-</option>
+<option>-Country-</option>
 <option value="1">Arab</option>
 <option value="2">Canada</option>
 <option value="3">China</option>
@@ -146,7 +147,7 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <option value="28">Vietnam</option>
 <option value="29">Other..</option>
 </select><br><br>
-<p><b> Instagram </b></p>
+<i class="fa fa-instagram"></i><p><b> Instagram </b></p>
 <input type="text" Name="inst" size="20"><br><br>
 <p><b> Twitter </b></p>
 <input type="text" Name="twit" size="20"><br><br>
