--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 </style>
 <title>Form Pendaftaran</title></head>
 <body> 
-<i class="fa fa-star"></i><i class="fa fa-star"></i><b><font color="black" size="6" style=font-family:"ravie";> Signing Up for ASTRO</font></b><br><i class="fa fa-star"></i><i class="fa fa-star"></i>
+<i class="fa fa-star"></i><i class="fa fa-star"></i><b><font color="black" size="6" style=font-family:"ravie";> Signing Up for ASTRO</font></b><i class="fa fa-star"></i><i class="fa fa-star"></i><br>
 <b><font color="black" size="5" style=font-family:"consolas";>=Fansite for AROHA=</font></b>
 <br>
 <p><b> Username </b></p>
@@ -114,7 +114,7 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <input type="radio" name="Gender" value="L">Male
 <input type="radio" name="Gender" value="P">Female
 <br><br>
-<i class="fa fa-map-marker"></i><p><b>Country</b></p><i class="fa fa-map-marker"></i>
+<p><b><i class="fa fa-map-marker"></i>Country<i class="fa fa-map-marker"></i></b></p>
 <select name="foreign">
 <option>-Country-</option>
 <option value="1">Arab</option>
@@ -147,7 +147,7 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <option value="28">Vietnam</option>
 <option value="29">Other..</option>
 </select><br><br>
-<i class="fa fa-instagram"></i><p><b> Instagram </b></p>
+<p><b><i class="fa fa-instagram"></i>Instagram </b></p>
 <input type="text" Name="inst" size="20"><br><br>
 <p><b> Twitter </b></p>
 <input type="text" Name="twit" size="20"><br><br>
