--- a/form.html
+++ b/form.html
@@ -9,17 +9,17 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <i class="fa fa-star"></i><i class="fa fa-star"></i><b><font color="black" size="6" style=font-family:"ravie";> Signing Up for ASTRO</font></b><i class="fa fa-star"></i><i class="fa fa-star"></i><br>
 <b><font color="black" size="5" style=font-family:"consolas";>=Fansite for AROHA=</font></b>
 <br>
-  <p><b><i class="fa fa-bug"></i> Username <i class="fa fa-bug"></i></b></p>
+  <p><b style=font-family:"cooper black";><i class="fa fa-bug"></i> Username <i class="fa fa-bug"></i></b></p>
 <input type="text" Name="nama" size="20" placeholder="Enter First Name">
 <input type="text" Name="nama" size="20" placeholder="Enter Last Name"><br><br>
-<p><b> Display Name </b></p>
+<p><b style=font-family:"cooper black";> Display Name </b></p>
 <input type="text" Name="displayname" size="46" placeholder="Enter Your Display Name"><br><br>
 <p><b><i class="fa fa-envelope-o"></i> Email <i class="fa fa-envelope-o"></i></b></p>
 <input type="text" Name="email" size="46" placeholder="Email Anda"><br><br>
-<p><b> Make Your Password </b></p>
+<p><b style=font-family:"cooper black";> Make Your Password </b></p>
 <input type="password" Name="sandi" size="46" placeholder="Enter Your New Password"><br><br>
 <input type="repassword" Name="sandi" size="46" placeholder="Enter Your Password Again"><br>
-  <p><b><i class="fa fa-calendar-o"></i> B.O.D <i class="fa fa-calendar-o"></i></b></p>
+  <p><b style=font-family:"cooper black";><i class="fa fa-calendar-o"></i> B.O.D <i class="fa fa-calendar-o"></i></b></p>
 <select name="Tanggal">
 <option>-Day-</option>
 <option value="1">1</option>
@@ -114,7 +114,7 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <input type="radio" name="Gender" value="L">Male
 <input type="radio" name="Gender" value="P">Female
 <br><br>
-<p><b><i class="fa fa-map-marker"></i> Country <i class="fa fa-map-marker"></i></b></p>
+<p><b style=font-family:"cooper black";><i class="fa fa-map-marker"></i> Country <i class="fa fa-map-marker"></i></b></p>
 <select name="foreign">
 <option>-Country-</option>
 <option value="1">Arab</option>
@@ -147,11 +147,11 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <option value="28">Vietnam</option>
 <option value="29">Other..</option>
 </select><br><br>
-<p><b><i class="fa fa-instagram"></i> Instagram <i class="fa fa-instagram"></i></b></p>
+<p><b style=font-family:"cooper black";><i class="fa fa-instagram"></i> Instagram <i class="fa fa-instagram"></i></b></p>
 <input type="text" Name="inst" size="20"><br><br>
 <p><b><i class="fa fa-twitter"></i> Twitter <i class="fa fa-twitter"></i></b></p>
 <input type="text" Name="twit" size="20"><br><br>
-<p><b> Your Bias </b></p>
+<p><b style=font-family:"cooper black";> Your Bias </b></p>
 <input type="radio" name="Bias" value="mj">MJ
 <input type="radio" name="Bias" value="ji">Jinjin
 <br><br>
@@ -161,7 +161,7 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <input type="radio" name="Bias" value="ro">Rocky
 <input type="radio" name="Bias" value="sa">Sanha
 <br><br>
-  <p><b><i class="fa fa-heart"></i> Thank you <i class="fa fa-heart"></i></b></p><br><br>
+  <p><b style=font-family:"cooper black";><i class="fa fa-heart"></i> Thank you <i class="fa fa-heart"></i></b></p><br><br>
 <input value="Submit" style="background-color: 4985D0; height: 50; width: 150;"type="submit">
 
 
