--- a/form.html
+++ b/form.html
@@ -6,17 +6,17 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 </style>
 <title>Form Pendaftaran</title></head>
 <body> 
-<i class="fa fa-star"></i><i class="fa fa-star"></i><b><font color="black" size="6" style=font-family:"ravie";> Signing Up for ASTRO</font></b><i class="fa fa-star"></i><i class="fa fa-star"></i><br>
+<i class="fa fa-star"></i><i class="fa fa-star"></i><b><font color="black" size="6" style=font-family:"ravie";> Signing Up for ASTRO Fan</font></b><i class="fa fa-star"></i><i class="fa fa-star"></i><br>
 <b><font color="black" size="5" style=font-family:"consolas";>=Fansite for AROHA=</font></b>
 <br>
   <p><b style=font-family:"cooper black";><i class="fa fa-bug"></i> Username <i class="fa fa-bug"></i></b></p>
 <input type="text" Name="nama" size="20" placeholder="Enter First Name">
 <input type="text" Name="nama" size="20" placeholder="Enter Last Name"><br><br>
-<p><b style=font-family:"cooper black";> Display Name </b></p>
+<p><b style=font-family:"cooper black";><i class="fa fa-pew"></i> Display Name <i class="fa fa-pew"></i></b></p>
 <input type="text" Name="displayname" size="46" placeholder="Enter Your Display Name"><br><br>
 <p><b><i class="fa fa-envelope-o"></i> Email <i class="fa fa-envelope-o"></i></b></p>
 <input type="text" Name="email" size="46" placeholder="Email Anda"><br><br>
-<p><b style=font-family:"cooper black";> Make Your Password </b></p>
+<p><b style=font-family:"cooper black";><i class="fa fa-key"></i> Make Your Password <i class="fa fa-key"></i></b></p>
 <input type="password" Name="sandi" size="46" placeholder="Enter Your New Password"><br><br>
 <input type="repassword" Name="sandi" size="46" placeholder="Enter Your Password Again"><br>
   <p><b style=font-family:"cooper black";><i class="fa fa-calendar-o"></i> B.O.D <i class="fa fa-calendar-o"></i></b></p>
@@ -151,7 +151,7 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <input type="text" Name="inst" size="20"><br><br>
 <p><b><i class="fa fa-twitter"></i> Twitter <i class="fa fa-twitter"></i></b></p>
 <input type="text" Name="twit" size="20"><br><br>
-<p><b style=font-family:"cooper black";> Your Bias </b></p>
+<p><b style=font-family:"cooper black";><i class="fa fa-leaf"></i> Your Bias <i class="fa fa-leaf"></i></b></p>
 <input type="radio" name="Bias" value="mj">MJ
 <input type="radio" name="Bias" value="ji">Jinjin
 <br><br>
