--- a/form.html
+++ b/form.html
@@ -6,8 +6,8 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 </style>
 <title>Form Pendaftaran</title></head>
 <body> 
-<i class="fa fa-star"></i><i class="fa fa-star"></i><b><font color="black" size="6" style=font-family:"ravie";> Signing Up for ASTRO Fan</font></b><i class="fa fa-star"></i><i class="fa fa-star"></i><br>
-<b><font color="black" size="5" style=font-family:"consolas";>=Fansite for AROHA=</font></b>
+<i class="fa fa-star"></i><i class="fa fa-star"></i><b><font color="black" size="6" style=font-family:"ravie";>Signing Up for ASTRO Fan</font></b><i class="fa fa-star"></i><i class="fa fa-star"></i><br>
+<b><font color="black" size="5" style=font-family:"consolas";>=Fansite for AROHA <i class="fa fa-smile-o"></i>=</font></b>
 <br>
   <p><b style=font-family:"cooper black";><i class="fa fa-bug"></i> Username <i class="fa fa-bug"></i></b></p>
 <input type="text" Name="nama" size="20" placeholder="Enter First Name">
@@ -152,14 +152,14 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <p><b><i class="fa fa-twitter"></i> Twitter <i class="fa fa-twitter"></i></b></p>
 <input type="text" Name="twit" size="20"><br><br>
 <p><b style=font-family:"cooper black";><i class="fa fa-leaf"></i> Your Bias <i class="fa fa-leaf"></i></b></p>
-<input type="radio" name="Bias" value="mj">MJ
-<input type="radio" name="Bias" value="ji">Jinjin
+<input type="radio" name="Bias" value="mj">MJ<i class="fa fa-linux"></i><br>
+<input type="radio" name="Bias" value="ji">Jinjin<i class="fa fa-compass"></i>
 <br><br>
-<input type="radio" name="Bias" value="ch">Cha Eunwoo
-<input type="radio" name="Bias" value="mo">Moonbin
+<input type="radio" name="Bias" value="ch">Cha Eunwoo<i class="fa fa-music"></i><br>
+<input type="radio" name="Bias" value="mo">Moonbin<i class="fa fa-github-alt"></i>
 <br><br>
-<input type="radio" name="Bias" value="ro">Rocky
-<input type="radio" name="Bias" value="sa">Sanha
+<input type="radio" name="Bias" value="ro">Rocky<i class="fa fa-camera"></i><br>
+<input type="radio" name="Bias" value="sa">Sanha<i class="fa fa-puzzle-piece"></i>
 <br><br>
   <p><b style=font-family:"cooper black";><i class="fa fa-heart"></i> Thank you <i class="fa fa-heart"></i></b></p><br><br>
 <input value="Submit" style="background-color: 4985D0; height: 50; width: 150;"type="submit">
