--- a/form.html
+++ b/form.html
@@ -149,17 +149,17 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 </select><br><br>
 <p><b style=font-family:"cooper black";><i class="fa fa-instagram"></i> Instagram <i class="fa fa-instagram"></i></b></p>
 <input type="text" Name="inst" size="20"><br><br>
-<p><b><i class="fa fa-twitter"></i> Twitter <i class="fa fa-twitter"></i></b></p>
+<p><b style=font-family:"cooper black";><i class="fa fa-twitter"></i> Twitter <i class="fa fa-twitter"></i></b></p>
 <input type="text" Name="twit" size="20"><br><br>
 <p><b style=font-family:"cooper black";><i class="fa fa-leaf"></i> Your Bias <i class="fa fa-leaf"></i></b></p>
-<input type="radio" name="Bias" value="mj">MJ<i class="fa fa-linux"></i><br>
-<input type="radio" name="Bias" value="ji">Jinjin<i class="fa fa-compass"></i>
+<input type="radio" name="Bias" value="mj">MJ<i class="fa fa-linux"></i>
+<input type="radio" name="Bias" value="ji"> Jinjin<i class="fa fa-compass"></i>
 <br><br>
-<input type="radio" name="Bias" value="ch">Cha Eunwoo<i class="fa fa-music"></i><br>
-<input type="radio" name="Bias" value="mo">Moonbin<i class="fa fa-github-alt"></i>
+<input type="radio" name="Bias" value="ch">Cha Eunwoo<i class="fa fa-music"></i>
+<input type="radio" name="Bias" value="mo"> Moonbin<i class="fa fa-github-alt"></i>
 <br><br>
-<input type="radio" name="Bias" value="ro">Rocky<i class="fa fa-camera"></i><br>
-<input type="radio" name="Bias" value="sa">Sanha<i class="fa fa-puzzle-piece"></i>
+<input type="radio" name="Bias" value="ro">Rocky<i class="fa fa-camera"></i>
+<input type="radio" name="Bias" value="sa"> Sanha<i class="fa fa-puzzle-piece"></i>
 <br><br>
   <p><b style=font-family:"cooper black";><i class="fa fa-heart"></i> Thank you <i class="fa fa-heart"></i></b></p><br><br>
 <input value="Submit" style="background-color: 4985D0; height: 50; width: 150;"type="submit">
