--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
   <p><b style=font-family:"cooper black";><i class="fa fa-bug"></i> Username <i class="fa fa-bug"></i></b></p>
 <input type="text" Name="nama" size="20" placeholder="Enter First Name">
 <input type="text" Name="nama" size="20" placeholder="Enter Last Name"><br><br>
-<p><b style=font-family:"cooper black";><i class="fa fa-pew"></i> Display Name <i class="fa fa-pew"></i></b></p>
+<p><b style=font-family:"cooper black";><i class="fa fa-reddit"></i> Display Name <i class="fa fa-reddit"></i></b></p>
 <input type="text" Name="displayname" size="46" placeholder="Enter Your Display Name"><br><br>
 <p><b style=font-family:"cooper black";><i class="fa fa-envelope-o"></i> Email <i class="fa fa-envelope-o"></i></b></p>
 <input type="text" Name="email" size="46" placeholder="Email Anda"><br><br>
@@ -111,8 +111,8 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <option value="2016">2016</option>
 <option value="2017">2017</option>
 </select><br><br>
-<input type="radio" name="Gender" value="L">Male
-<input type="radio" name="Gender" value="P">Female
+<input type="radio" name="Gender" value="L">Male <i class="fa fa-male"></i>
+<input type="radio" name="Gender" value="P">Female <i class="fa fa-female"></i>
 <br><br>
 <p><b style=font-family:"cooper black";><i class="fa fa-map-marker"></i> Country <i class="fa fa-map-marker"></i></b></p>
 <select name="foreign">
