--- a/form.html
+++ b/form.html
@@ -162,7 +162,7 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <input type="radio" name="Bias" value="sa"> Sanha <i class="fa fa-puzzle-piece"></i>
 <br><br>
   <p><b style=font-family:"cooper black";><i class="fa fa-heart"></i> Thank you <i class="fa fa-heart"></i></b></p><br><br>
-<input value="Submit" style="background-color: EE82EE; height: 50; width: 150;"type="submit"; style=font-family:"cooper black";>
+<input value="Submit" style=font-family:"cooper black"; style="background-color: EE82EE; height: 50; width: 150;"type="submit">
 
 
 </body>
