--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@ body {background-image:url(https://68.media.tumblr.com/48fc2d6ac28e8e579cd41cd79
 <p><b style=font-family:"cooper black";><i class="fa fa-reddit"></i> Display Name <i class="fa fa-reddit"></i></b></p>
 <input type="text" Name="displayname" size="46" placeholder="Enter Your Display Name"><br><br>
 <p><b style=font-family:"cooper black";><i class="fa fa-envelope-o"></i> Email <i class="fa fa-envelope-o"></i></b></p>
-<input type="text" Name="email" size="46" placeholder="Email Anda"><br><br>
+<input type="text" Name="email" size="46" placeholder="Enter Your Email"><br><br>
 <p><b style=font-family:"cooper black";><i class="fa fa-key"></i> Make Your Password <i class="fa fa-key"></i></b></p>
 <input type="password" Name="sandi" size="46" placeholder="Enter Your New Password"><br><br>
 <input type="repassword" Name="sandi" size="46" placeholder="Enter Your Password Again"><br>
