--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,6 +13,7 @@
 		<tr> 
 		<th class="kiri">
 		<div class="portengah">"Site sederhana untuk memenuhi tugas Pemrograman Web"</div>
+			<div class="nama">Nur Tsabitah<br>16520244015</div>
 		</th>
 		<th class="kanan"> 
 <div>
