--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
 <table class="bismillah">
 		<tr> 
 		<th class="kiri">
-		<div class="portengah">"Site sederhana untuk memenuhi tugas Pemrograman Web"</div>
+		<div class="portengah">"Site sederhana untuk memenuhi tugas Pemrograman Web"</div><br><br>
 			<div class="nama">Nur Tsabitah<br>16520244015</div>
 		</th>
 		<th class="kanan"> 
