--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
 <table class="bismillah">
 		<tr> 
 		<th class="kiri">
-		<div class="portengah">"Site sederhana untuk memenuhi tugas Pemrograman Web"</div><br><br>
+		<div class="portengah">"Site sederhana untuk memenuhi tugas Pemrograman Web"</div>
 			</th>
 		<th class="kanan"> 
 <div>
